refactor: 불필요 개행 및 import문 삭제 (#11)